# spec-classes

./: .gitignore  .pylintrc  404.html  LICENSE  MANIFEST.in  README.md  index.html  play.ipynb  pyproject.toml  requirements.txt  requirements_test.txt  setup.py  sitemap.xml  spec_classes.py  tests.py  tox.ini
.github/workflows/: publish.yml  publish_docs.yml  tests.yml  tox.yml
assets/stylesheets/: colors.css
docsite/: mkdocs.yml
docsite/docs/: index.md
docsite/docs/examples/: basic.md  collections.md  dataclasses.md  index.md  preparation.md
docsite/docs/implementation/: how_it_works.md  performance.md
docsite/docs/usage/: advanced.md  basic.md  collections.md  index.md  scalars.md  special_types.md
docsite/docs/usage/methods/: index.md  scalars.md  toplevel.md
examples/: index.html
examples/basic/: index.html
examples/collections/: index.html
examples/dataclasses/: index.html
examples/preparation/: index.html
implementation/how_it_works/: index.html
implementation/performance/: index.html
search/: search_index.json
spec_classes/: __init__.py  _version.py  errors.py  method_builder.py  spec_class.py  special_types.py  types.py
spec_classes/collections/: __init__.py  base.py  mappings.py  sequences.py  sets.py
spec_classes/methods/: __init__.py  base.py  core.py  scalar.py  toplevel.py
spec_classes/methods/collections/: __init__.py  mappings.py  sequences.py  sets.py
spec_classes/types/: __init__.py  alias.py  attr.py  attr_proxy.py  keyed.py  keyed_list.py  missing.py  spec_property.py  validated.py
spec_classes/utils/: collections.py  method_builder.py  mutation.py  naming.py  stackdepth.py  type_checking.py  weakref_cache.py
tests/: conftest.py  test_spec_class.py  test_special_types.py  test_types.py
tests/collections/: test_mappings.py  test_sequences.py  test_sets.py
tests/methods/: test_collections_mappings.py  test_collections_sequences.py  test_collections_sets.py  test_scalar.py  test_toplevel.py
tests/types/: test_alias.py  test_attr.py  test_attr_proxy.py  test_keyed.py  test_keyed_list.py  test_missing.py  test_spec_property.py  test_validated.py
tests/utils/: test_method_builder.py  test_mutation.py  test_naming.py  test_type_checking.py  test_weakref_cache.py
usage/: index.html
usage/advanced/: index.html
usage/basic/: index.html
usage/methods/: index.html
usage/methods/collections/: index.html
usage/methods/scalars/: index.html
usage/methods/toplevel/: index.html
usage/special_types/: index.html
