[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "spec-classes"
description = "Represent type-checked specifications as Python classes and incrementally build them."
authors = [
    {name = "Matthew Wardrop", email = "mpwardrop@gmail.com"},
]
license = "MIT"
readme = "docsite/docs/index.md"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = [
    "cached-property>=1.5.2",
    "inflect>=5.0.0",
    "lazy-object-proxy>=1.5.0",
    "typing-extensions>=4.1",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/matthewwardrop/spec-classes"
documentation = "https://matthewwardrop.github.io/spec-classes"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "spec_classes/_version.py"

# Build target configuration

[tool.hatch.build.targets.sdist]
include = [
    "docsite",
    "spec_classes",
    "tests",
    "LICENSE",
    "pyproject.toml",
    "README.md",
]

# Testing configuration

[tool.hatch.envs.default]
dependencies = [
    "ruff==0.14.13",
    "pytest-cov==7.0.0",
    "pytest==9.0.2",
]

[tool.hatch.envs.default.scripts]
tests = ["unit-tests", "linters"]
unit-tests = "pytest --cov=spec_classes --cov-report=term-missing --cov-report=xml -vv {args:tests}"
linters = [
    "ruff check",
    "ruff format --check",
]
format = "ruff format spec_classes tests"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311", "312", "313", "314"]

# Linting configuration

[tool.ruff.lint]
select = ["E", "F", "W", "I", "PL"]
ignore = [
    "C901",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D200",
    "D205",
    "D400",
    "D401",
    "D413",
    "E501",
    "F405",
    "PLR09",
    "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["E741"]

# Coverage configuration

[tool.coverage.run]
omit = ["spec_classes/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if sys.version_info >= \\(3, 11\\):",
]
